--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -12,8 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Core\AI\AIEvents.js" />
-    <None Include="..\..\Core\AI\Systems\AIController.js" />
+    <None Include="..\..\Core\AI\AITask.js" />
+    <None Include="..\..\Core\AI\Components\CAIData.js" />
     <None Include="..\..\Core\AI\Systems\AISimulationSystem.js" />
+    <None Include="..\..\Core\AI\Systems\AITaskAttackingSystem.js" />
     <None Include="..\..\Core\Engine\3rdParty\jquery-1.9.1.js" />
     <None Include="..\..\Core\Engine\3rdParty\underscore.js" />
     <None Include="..\..\Core\Engine\Components\CTile.js" />
@@ -90,6 +92,7 @@
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sprite.js" />
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sylvester.src.js" />
     <None Include="..\..\MobileClient\www\Javascript\ActionsMenuController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\AIController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AssetsStaticScaler.js" />
     <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleFieldRenderer.js" />
     <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleRenderingEvents.js" />
