* Implemented path finding algorithm. Some distance tools for tiles as well. * Improved AI: it now moves closer to enemies and attacks on sight. Handled cases where unit has no available actions or it or the enemy was destroyed. * Added debug text overlay over tiles.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -139,6 +139,7 @@
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystemScrollOptimizer.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\CanvasInstancesUpdateSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ControllerRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\DebugTilesRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\LayersUpdateSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\IdleAnimationsSystem.js" />
