--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -437,6 +437,9 @@
     <None Include="..\..\Core\AI\Systems\AITaskBuyingSystem.js">
       <Filter>Javascript\Core\AI\Systems</Filter>
     </None>
+    <None Include="..\..\Core\AI\Systems\AITaskCaptureSystem.js">
+      <Filter>Javascript\Core\AI\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
