* Implemented "owner knowledge" so if enemies capture bases in fog of war, player doesn't see it happen. Player is now presented with "what he knows about the owner" in the fog of war. * If enemy captures player structure, player knows who is the new owner. * Small refactoring.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -62,8 +62,8 @@
     <None Include="..\..\Core\Gameplay\Systems\BattleSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\EffectsSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\GameStateSystem.js" />
-    <None Include="..\..\Core\Gameplay\Systems\TileBaseSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\TileCapturingSystem.js" />
+    <None Include="..\..\Core\Gameplay\Systems\TileStructuresSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\TileVisibilitySystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\UnitsSystem.js" />
     <None Include="..\..\Core\Gameplay\TerrainType.js" />
