* AI: Implemented healing assignments. * AI: Fixed - Highlights not refreshing on finishing action. * AI: Attack priority is now lower if enemy is stronger.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -440,6 +440,9 @@
     <None Include="..\..\Core\Gameplay\Systems\TileStructuresSystem.js">
       <Filter>Javascript\Core\Gameplay\Systems</Filter>
     </None>
+    <None Include="..\..\Core\AI\Systems\AITaskHealSystem.js">
+      <Filter>Javascript\Core\AI\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
