* AI: Implemented AIController UI. It can pause/resume/step-by-step/change speed of the execution. Shows current assignment info. * Fixed: ECS wrong system name getter.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -96,6 +96,7 @@
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sylvester.src.js" />
     <None Include="..\..\MobileClient\www\Javascript\ActionsMenuController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AIController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\AIControllerUI.js" />
     <None Include="..\..\MobileClient\www\Javascript\AssetsStaticScaler.js" />
     <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleFieldRenderer.js" />
     <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleRenderingEvents.js" />
