--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -446,6 +446,9 @@
     <None Include="..\..\MobileClient\www\Javascript\AIControllerUI.js">
       <Filter>Javascript</Filter>
     </None>
+    <None Include="..\..\Core\AI\Systems\AITaskExploreSystem.js">
+      <Filter>Javascript\Core\AI\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
