* Fight: added unit entrance tween on start up. Some refactor -> tile background is now sprite attached to the unit and moves with it.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -102,6 +102,7 @@
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\persist.js" />
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sprite.js" />
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sylvester.src.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\t.js" />
     <None Include="..\..\MobileClient\www\Javascript\ActionsMenuController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AIController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AIControllerUI.js" />
