--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -512,6 +512,12 @@
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\t.js">
       <Filter>Javascript\3rdParty</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightUnitsRenderingEffectsSystem.js">
+      <Filter>Javascript\FightRendering\Systems</Filter>
+    </None>
+    <None Include="..\..\MobileClient\www\Javascript\FightRendering\Components\CFightUnitRenderingEffects.js">
+      <Filter>Javascript\FightRendering\Components</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
